# api_to_dimensional_model

./: .gitignore  LICENSE  README.md  api_to_dimensional_model.py  example.ipynb  pyproject.toml  setup.py
src/: __init__.py  api_to_dimensional_model.py
