[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api_to_dimensional_model"
version = "0.0.1"
description='Take the results of an API endpoint, and process them into star schema with Python.'
authors = [
{name = "Ryan Brown", email = "ryanbrownnetworking777@gmail.com"}
]

[options]
python_requires = ">=3.6"

[options.packages.find]
where = "src"

[metadata]
license_files = "LICENSE"
